--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "plugins/ipynb"]
-	path = plugins/ipynb
+[submodule "pelican-plugins/ipynb"]
+	path = pelican-plugins/ipynb
 	url = https://github.com/danielfrg/pelican-ipynb.git
